4th attempt, 33 seconds